fix calendar spacing and add outlines

--- a/src/index.css
+++ b/src/index.css
@@ -11,40 +11,20 @@
     background-attachment: fixed;
   }
 
-  .react-calendar__viewContainer {
+  .reactCalendar {
+    background: white;
+    line-height: 2em;
+    outline: 1px solid black;
   }
 
-  .react-calendar__month-view {
-    /* container */
-    display: flex;
-    grid-template-columns: minmax(30px, 5fr) 25fr;
+  .tileContent {
+    height: 50px;
+    text-align: center;
+    vertical-align: middle;
   }
 
-  .react-calendar__month-view__weekdays {
+  button.react-calendar__tile {
+    outline: 1px solid grey;
   }
 
-  /* div.react-calendar.container {
-    /* width: 350px; */
-  /* max-width: 100%; */
-  /* background: white; */
-  /* border: none; */
-  /* font-family: Arial, Helvetica, sans-serif; */
-  /* line-height: 1.125em; */
 }
-
-/* .react-calendar {
-    max-width: 100%;
-  } */
-
-/* .react-calendar__tile {
-    max-width: 14vw;
-    height: 14vw;
-    background-color: blue;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    font-size: 2rem;
-    min-width: 100px;
-    min-height: 100px;
-  } */
